# bgm-nerdrock

./: .gitignore  .project  Makefile  README.md  cdk.json  cdk.py  config.yml  create-nerdrock.template.yml  create-resource-group.template.yml  create-s3-bucket.template.json  create-s3-bucket.template.yml  handlers.py  infrastructure.py  pyproject.toml  refresh_database.py  requirements.txt  serverless.yml
.github/workflows/: deploy-nerdrock.yml  main.yml  manual.yml  web-site.yml
api/: __init__.py  config.yml  infrastructure.py
api/runtime/: config.py  handler_base.py  log.py
api/runtime/badges/: badges_handler.py  core.py  service.py
api/runtime/database/: bandcamp.py  database_handler.py  decimal_yaml.py  service.py
api/runtime/discography/: discography_handler.py  service.py
api/test/mock_data/: mock_album_info.json  mock_band_info.json  (+7 more)
badge/: core.py  service.py
database/: __init__.py  bandcamp.py  decimal_yaml.py  service.py  track_info.yml
db/: __init__.py  infrastructure.py
discography/: __init__.py  bandcamp.py  service.py
handler/: __init__.py  badges.py  base.py  config.py  database.py  discography.py  refresh.py
iac/: create-nerdrock.template.yml  deploy-modules.py
iac/lambda-module/: .rpdk-config
iac/resource-group-module/: .rpdk-config
iac/s3-website-module/: .rpdk-config
test/: run
test/integration/: badges_test.py  discography_refresh_test.py  discography_test.py  run
test/mock_data/: also_this_other_stuff_album.json  brian_gray_discography.json  full_discography.json  mock_config.yml  mock_secrets.yml  pi_day_track.json
test/unit/: badge_service_test.py  bandcamp_test.py  discography_service_test.py  handlers_test.py  run
web/: __init__.py  error.html  index.html  index_old.html  infrastructure.py  serve
web/.well-known/: atproto-did
web/css/: bg-common.css  bg-immobile.css
web/js/: BGAlbum.js  BGBadges.js  BGDiscography.js  BGNerdRock.js  BGTrack.js  bandcamp copy.js  bandcamp.js  bg.js  track-info.js
(+13 files in other folders)
